--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.3
-  path_provider: ^1.6.11
-  path: ^1.7.0
+  path_provider: 
+  path: 
   flutter_svg: ^0.19.0
 
 dev_dependencies:
