--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ dependencies:
   http: ^0.13.3
   path_provider: 
   path: 
-  flutter_svg: ^0.19.0
+  flutter_svg:
 
 dev_dependencies:
   flutter_test:
